avoid jumping when border around container

--- a/src/plugins/kibana/public/settings/sections/relations/styles/relations.less
+++ b/src/plugins/kibana/public/settings/sections/relations/styles/relations.less
@@ -3,6 +3,22 @@
 
 .relations-settings {
 
+
+  .dashboards-section {
+    border: 2px #fff solid;
+
+    &.highlight {
+      border-color: #dedede;
+    }
+  }
+
+  .indices-section {
+    border: 2px #fff solid;
+    &.highlight {
+      border-color: #dedede;
+    }
+  }
+
   .btn {
     margin-top: 5px;
     margin-bottom: 5px;
@@ -83,12 +99,6 @@
   .container h2 {
     margin-top: 0;
     font-size: 24px;
-  }
-
-  .highlight {
-    border-color: grey;
-    border-weight: 5px;
-    border-style: solid;
   }
 
   .graphs-section {
